# ecs-engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build-run.sh  build.sh  cmake_install.cmake
include/: IMGUI_def.h
lib/imgui/: IMGUI.c  IMGUI.h  IMGUI_TextureCache.c  IMGUI_TextureCache.h
src/engine/: adb.c  adb.h  debug.h  engine.c
src/game/: game.c
